--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
             <h1>Tere tulemast!</h1>
             <p>
                 Barbar on alternatiiv- ja raskemuusikaklubi mis pakub iganädalast kvaliteetset meelelahutust!
-                See ei ole BarBari ametlik veebileht, vaid veebiarenduse harjutamise eesmärgil loodud leht. See ei ole BarBari ametlik veebileht, vaid veebiarenduse harjutamise eesmärgil loodud leht. See ei ole BarBari ametlik veebileht, vaid veebiarenduse harjutamise eesmärgil loodud leht. See ei ole BarBari ametlik veebileht, vaid veebiarenduse harjutamise eesmärgil loodud leht.
+                See ei ole Barbari ametlik veebileht, vaid veebiarenduse harjutamise eesmärgil loodud leht. See ei ole Barbari ametlik veebileht, vaid veebiarenduse harjutamise eesmärgil loodud leht. See ei ole Barbari ametlik veebileht, vaid veebiarenduse harjutamise eesmärgil loodud leht. See ei ole Barbari ametlik veebileht, vaid veebiarenduse harjutamise eesmärgil loodud leht.
+                <br><br> <strong>PS! See on lehe väga algne versioon, vajab palju täiendamist ja mobiilisõbralikuks muutmist!</strong> - 12. juuni 2020
             </p>
         </div>
     </section>
