--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <nav id="navbar">
-        <a href="#welcome" class="nav-link">Logo</a>
+        <a href="#welcome" class="nav-link">Barbar</a>
         <a href="#contact" class="nav-link">Contacts</a>
     </nav>
 
@@ -39,7 +39,7 @@
                 Rävala pst 8, <br>
                 10145 Tallinn <br> <br>
                 Tel: <strong>+372 5851 8184</strong> <br>
-                E-post: <strong>barbarestonia@gmail.com</strong>
+                E-post: <strong><a href="mailto:barbarestonia@gmail.com">barbarestonia@gmail.com</a></strong>
                 </p>
             </div>
             <div id="socials">
@@ -48,7 +48,7 @@
                 <a href="https://www.instagram.com/barbarfeast/" target="_blank"><i class="fab fa-instagram"></i> <span>@barbarfeast</span></a>
             </div>
         </div>
-        <iframe id="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2028.9425274882697!2d24.753098615984257!3d59.43403308169559!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46929301804bef0d%3A0x1b89f8b5e04afc26!2sBarbar!5e0!3m2!1sen!2see!4v1591952758513!5m2!1sen!2see" width="500" height="350" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2028.9425274882697!2d24.753098615984257!3d59.43403308169559!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46929301804bef0d%3A0x1b89f8b5e04afc26!2sBarbar!5e0!3m2!1sen!2see!4v1591952758513!5m2!1sen!2see" width="500" height="350" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
         </div>
     </section>
 
