--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 <body>
     <nav id="navbar">
         <a href="#welcome" class="nav-link">Barbar</a>
-        <a href="#contact" class="nav-link">Contacts</a>
+        <a href="#menuu" class="nav-link">Menüü</a>
+        <a href="#contact" class="nav-link">Asukoht</a>
     </nav>
 
     <section id="welcome">
@@ -25,6 +26,12 @@
         </div>
     </section>
 
+    <section id="menuu">
+        <img src="https://scontent.fhen1-1.fna.fbcdn.net/v/t1.0-9/s960x960/71085961_1277966119033861_5167954995600949248_o.jpg?_nc_cat=111&_nc_sid=316dd1&_nc_ohc=_kdyvDF00nEAX8WNDa2&_nc_ht=scontent.fhen1-1.fna&_nc_tp=7&oh=f64b9a677565a7522f61cecc0a45898f&oe=5F0AFD07" alt="">
+        <img src="https://scontent.fhen1-1.fna.fbcdn.net/v/t1.0-9/s960x960/70538338_1277966129033860_3387966277208244224_o.jpg?_nc_cat=102&_nc_sid=316dd1&_nc_ohc=HmEd5T_gOQIAX-cXwwI&_nc_ht=scontent.fhen1-1.fna&_nc_tp=7&oh=b5b7dc0ed82407db7bd0a2a5d6d55619&oe=5F08618A" alt="">
+        <img src="https://scontent.fhen1-1.fna.fbcdn.net/v/t1.0-9/s960x960/70401532_1277966132367193_8438684140395560960_o.jpg?_nc_cat=110&_nc_sid=316dd1&_nc_ohc=QlawpSuObecAX8wqDiX&_nc_ht=scontent.fhen1-1.fna&_nc_tp=7&oh=c5c0d352ac7dd100900bcd86786586b1&oe=5F09C7B5" alt="">
+    </section>
+
     <section id="contact">
         <div class="flex">
         <div id="cinfo">
@@ -36,7 +43,7 @@
                 </p>
                 <br>
                 <p>
-                Rävala pst 8, <br>
+                Rävala pst 8,
                 10145 Tallinn <br> <br>
                 Tel: <strong>+372 5851 8184</strong> <br>
                 E-post: <strong><a href="mailto:barbarestonia@gmail.com">barbarestonia@gmail.com</a></strong>
