Added events, removed events
Commented out Menu

--- a/index.html
+++ b/index.html
@@ -9,28 +9,34 @@
     <script src="https://kit.fontawesome.com/bd4203382c.js" crossorigin="anonymous"></script>
 </head>
 <body>
+    <!-- JavaScript SDK FB events jaoks-->
+    <div id="fb-root"></div>
+    <script async defer crossorigin="anonymous" src="https://connect.facebook.net/et_EE/sdk.js#xfbml=1&version=v7.0" nonce="IoNEua7r"></script>
+
     <nav id="navbar">
         <a href="#welcome" class="nav-link">Barbar</a>
-        <a href="#menuu" class="nav-link">Menüü</a>
+<!--         <a href="#menuu" class="nav-link">Menüü</a> -->
         <a href="#contact" class="nav-link">Asukoht</a>
     </nav>
 
     <section id="welcome">
         <div class="wrapper">
-            <h1>Tere tulemast!</h1>
-            <p>
-                Barbar on alternatiiv- ja raskemuusikaklubi mis pakub iganädalast kvaliteetset meelelahutust!
-                See ei ole Barbari ametlik veebileht, vaid veebiarenduse harjutamise eesmärgil loodud leht. See ei ole Barbari ametlik veebileht, vaid veebiarenduse harjutamise eesmärgil loodud leht. See ei ole Barbari ametlik veebileht, vaid veebiarenduse harjutamise eesmärgil loodud leht. See ei ole Barbari ametlik veebileht, vaid veebiarenduse harjutamise eesmärgil loodud leht.
-                <br><br> <strong>PS! See on lehe väga algne versioon, vajab palju täiendamist ja mobiilisõbralikuks muutmist!</strong> - 12. juuni 2020
-            </p>
+            <div class="margin13">
+                <h1>Tere tulemast!</h1>
+                <p>
+                    Barbar on alternatiiv- ja raskemuusikaklubi mis pakub iganädalast kvaliteetset meelelahutust!
+                    See ei ole Barbari ametlik veebileht, vaid veebiarenduse harjutamise eesmärgil loodud leht. See ei ole Barbari ametlik veebileht, vaid veebiarenduse harjutamise eesmärgil loodud leht. See ei ole Barbari ametlik veebileht, vaid veebiarenduse harjutamise eesmärgil loodud leht. See ei ole Barbari ametlik veebileht, vaid veebiarenduse harjutamise eesmärgil loodud leht.
+                    <br><br> <strong>PS! See on lehe väga algne versioon, vajab palju täiendamist ja mobiilisõbralikuks muutmist!</strong> - 12. juuni 2020
+                </p>
+            </div>
         </div>
     </section>
 
-    <section id="menuu">
+<!--     <section id="menuu">
         <img src="https://scontent.fhen1-1.fna.fbcdn.net/v/t1.0-9/s960x960/71085961_1277966119033861_5167954995600949248_o.jpg?_nc_cat=111&_nc_sid=316dd1&_nc_ohc=_kdyvDF00nEAX8WNDa2&_nc_ht=scontent.fhen1-1.fna&_nc_tp=7&oh=f64b9a677565a7522f61cecc0a45898f&oe=5F0AFD07" alt="">
         <img src="https://scontent.fhen1-1.fna.fbcdn.net/v/t1.0-9/s960x960/70538338_1277966129033860_3387966277208244224_o.jpg?_nc_cat=102&_nc_sid=316dd1&_nc_ohc=HmEd5T_gOQIAX-cXwwI&_nc_ht=scontent.fhen1-1.fna&_nc_tp=7&oh=b5b7dc0ed82407db7bd0a2a5d6d55619&oe=5F08618A" alt="">
         <img src="https://scontent.fhen1-1.fna.fbcdn.net/v/t1.0-9/s960x960/70401532_1277966132367193_8438684140395560960_o.jpg?_nc_cat=110&_nc_sid=316dd1&_nc_ohc=QlawpSuObecAX8wqDiX&_nc_ht=scontent.fhen1-1.fna&_nc_tp=7&oh=c5c0d352ac7dd100900bcd86786586b1&oe=5F09C7B5" alt="">
-    </section>
+    </section> -->
 
     <section id="contact">
         <div class="flex">
@@ -45,7 +51,7 @@
                 <p>
                 Rävala pst 8,
                 10145 Tallinn <br> <br>
-                Tel: <strong>+372 5851 8184</strong> <br>
+                Tel: <strong><a href="tel:+37258518184">+372 5851 8184</a></strong> <br>
                 E-post: <strong><a href="mailto:barbarestonia@gmail.com">barbarestonia@gmail.com</a></strong>
                 </p>
             </div>
