--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
 <body>
     <!-- JavaScript SDK FB events jaoks-->
     <div id="fb-root"></div>
-    <script async defer crossorigin="anonymous" src="https://connect.facebook.net/et_EE/sdk.js#xfbml=1&version=v7.0" nonce="IoNEua7r"></script>
+    <script async defer crossorigin="anonymous" src="https://connect.facebook.net/et_EE/sdk.js#xfbml=1&version=v7.0" nonce="5U2SAQL0"></script>
 
     <nav id="navbar">
         <a href="#welcome" class="nav-link">Barbar</a>
+        <a href="#events" class="nav-link">Üritused</a>
 <!--         <a href="#menuu" class="nav-link">Menüü</a> -->
         <a href="#contact" class="nav-link">Asukoht</a>
     </nav>
@@ -37,6 +38,18 @@
         <img src="https://scontent.fhen1-1.fna.fbcdn.net/v/t1.0-9/s960x960/70538338_1277966129033860_3387966277208244224_o.jpg?_nc_cat=102&_nc_sid=316dd1&_nc_ohc=HmEd5T_gOQIAX-cXwwI&_nc_ht=scontent.fhen1-1.fna&_nc_tp=7&oh=b5b7dc0ed82407db7bd0a2a5d6d55619&oe=5F08618A" alt="">
         <img src="https://scontent.fhen1-1.fna.fbcdn.net/v/t1.0-9/s960x960/70401532_1277966132367193_8438684140395560960_o.jpg?_nc_cat=110&_nc_sid=316dd1&_nc_ohc=QlawpSuObecAX8wqDiX&_nc_ht=scontent.fhen1-1.fna&_nc_tp=7&oh=c5c0d352ac7dd100900bcd86786586b1&oe=5F09C7B5" alt="">
     </section> -->
+
+    <section id="events">
+    <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fbarbarestonia&tabs=events&width=500&height=500&small_header=true&adapt_container_width=true&hide_cover=false&show_facepile=false&appId" width="500" height="500" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
+    </section>
+
+    <section id="maillist">
+        <h1>Saa infot tulevastest üritustest otse oma meilile:</h1>
+        <form action="POST">
+            <input type="email" name="email" id="email" placeholder="E-posti aadress"> <br>
+            <input type="button" value="Saada">
+        </form>
+    </section>
 
     <section id="contact">
         <div class="flex">
