--- a/index.html
+++ b/index.html
@@ -39,7 +39,16 @@
         <img src="https://scontent.fhen1-1.fna.fbcdn.net/v/t1.0-9/s960x960/70401532_1277966132367193_8438684140395560960_o.jpg?_nc_cat=110&_nc_sid=316dd1&_nc_ohc=QlawpSuObecAX8wqDiX&_nc_ht=scontent.fhen1-1.fna&_nc_tp=7&oh=c5c0d352ac7dd100900bcd86786586b1&oe=5F09C7B5" alt="">
     </section> -->
 
-    <section id="events">
+    <section id="events" class="flex">
+        <div id="text">
+            <h1>Piletid</h1>
+            <p>
+            Esimesel tunnil (21:00 - 22:00) on piletihind 6€, hiljem 8€. <br> Pärast üritust (00:30 - 04:00) on sissepääs tasuta. <br> Juhul, kui võõrustame hinnaklassilt veidi kallemaid bände, võivad ka piletihinnad kallimad olla. <br><br> Pileteid üritustele saab osta uksel nii sularahas kui kaardiga. <br> Täpsema piletiinfo leiate iga ürituse alt Facebookis või kirjutades meile <strong><a href="mailto:barbarestonia@gmail.com">barbarestonia@gmail.com</a></strong>
+            <h1>Soovid esineda?</h1>
+            <p>Võta meiega ühendust! Oleme kättesaadavad sotsiaalmeedia, telefoni (<strong><a href="tel:+37258518184">+372 5851 8184</a></strong>) ja e-posti (<strong><a href="mailto:barbarestonia@gmail.com">barbarestonia@gmail.com</a></strong>) teel. Võta meiega ühendust ka siis, kui ise esineda ei soovi, kuid soovid mõnd Barbarile kohast üritust läbi viia!
+            </p>
+            </p>
+        </div>
     <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fbarbarestonia&tabs=events&width=500&height=500&small_header=true&adapt_container_width=true&hide_cover=false&show_facepile=false&appId" width="500" height="500" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
     </section>
 
