--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <nav id="navbar">
         <a href="#welcome" class="nav-link">Barbar</a>
         <a href="#events" class="nav-link">Üritused</a>
-<!--         <a href="#menuu" class="nav-link">Menüü</a> -->
+        <a href="#menuu" class="nav-link">Menüü</a>
         <a href="#contact" class="nav-link">Asukoht</a>
     </nav>
 
@@ -33,12 +33,6 @@
         </div>
     </section>
 
-<!--     <section id="menuu">
-        <img src="https://scontent.fhen1-1.fna.fbcdn.net/v/t1.0-9/s960x960/71085961_1277966119033861_5167954995600949248_o.jpg?_nc_cat=111&_nc_sid=316dd1&_nc_ohc=_kdyvDF00nEAX8WNDa2&_nc_ht=scontent.fhen1-1.fna&_nc_tp=7&oh=f64b9a677565a7522f61cecc0a45898f&oe=5F0AFD07" alt="">
-        <img src="https://scontent.fhen1-1.fna.fbcdn.net/v/t1.0-9/s960x960/70538338_1277966129033860_3387966277208244224_o.jpg?_nc_cat=102&_nc_sid=316dd1&_nc_ohc=HmEd5T_gOQIAX-cXwwI&_nc_ht=scontent.fhen1-1.fna&_nc_tp=7&oh=b5b7dc0ed82407db7bd0a2a5d6d55619&oe=5F08618A" alt="">
-        <img src="https://scontent.fhen1-1.fna.fbcdn.net/v/t1.0-9/s960x960/70401532_1277966132367193_8438684140395560960_o.jpg?_nc_cat=110&_nc_sid=316dd1&_nc_ohc=QlawpSuObecAX8wqDiX&_nc_ht=scontent.fhen1-1.fna&_nc_tp=7&oh=c5c0d352ac7dd100900bcd86786586b1&oe=5F09C7B5" alt="">
-    </section> -->
-
     <section id="events" class="flex">
         <div id="text">
             <h1>Piletid</h1>
@@ -52,11 +46,17 @@
     <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fbarbarestonia&tabs=events&width=500&height=500&small_header=true&adapt_container_width=true&hide_cover=false&show_facepile=false&appId" width="500" height="500" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
     </section>
 
+    <section id="menuu">
+        <img src="https://scontent.fhen1-1.fna.fbcdn.net/v/t1.0-9/s960x960/71085961_1277966119033861_5167954995600949248_o.jpg?_nc_cat=111&_nc_sid=316dd1&_nc_ohc=_kdyvDF00nEAX8WNDa2&_nc_ht=scontent.fhen1-1.fna&_nc_tp=7&oh=f64b9a677565a7522f61cecc0a45898f&oe=5F0AFD07" alt="">
+        <img src="https://scontent.fhen1-1.fna.fbcdn.net/v/t1.0-9/s960x960/70538338_1277966129033860_3387966277208244224_o.jpg?_nc_cat=102&_nc_sid=316dd1&_nc_ohc=HmEd5T_gOQIAX-cXwwI&_nc_ht=scontent.fhen1-1.fna&_nc_tp=7&oh=b5b7dc0ed82407db7bd0a2a5d6d55619&oe=5F08618A" alt="">
+        <img src="https://scontent.fhen1-1.fna.fbcdn.net/v/t1.0-9/s960x960/70401532_1277966132367193_8438684140395560960_o.jpg?_nc_cat=110&_nc_sid=316dd1&_nc_ohc=QlawpSuObecAX8wqDiX&_nc_ht=scontent.fhen1-1.fna&_nc_tp=7&oh=c5c0d352ac7dd100900bcd86786586b1&oe=5F09C7B5" alt="">
+    </section>
+
     <section id="maillist">
-        <h1>Saa infot tulevastest üritustest otse oma meilile:</h1>
+        <h1>Liitu meie infokirjaga:</h1>
         <form action="POST">
-            <input type="email" name="email" id="email" placeholder="E-posti aadress"> <br>
-            <input type="button" value="Saada">
+            <input type="email" name="email" id="email" placeholder="E-posti aadress" required> <br>
+            <input type="submit" value="Liitu">
         </form>
     </section>
 
