Separate CSS for styles and structure

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NOT BarBar's Website</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="structure.css">
     <link href="https://fonts.googleapis.com/css2?family=Metal+Mania&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/bd4203382c.js" crossorigin="anonymous"></script>
 </head>
