--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <!-- JavaScript SDK FB events jaoks-->
     <div id="fb-root"></div>
-    <script async defer crossorigin="anonymous" src="https://connect.facebook.net/et_EE/sdk.js#xfbml=1&version=v7.0" nonce="5U2SAQL0"></script>
+    <script async defer crossorigin="anonymous" src="https://connect.facebook.net/et_EE/sdk.js#xfbml=1&version=v7.0" nonce="JV4h37a9"></script>
 
     <nav id="navbar">
         <a href="#welcome" class="nav-link">Barbar</a>
@@ -28,7 +28,7 @@
                 <p>
                     Barbar on alternatiiv- ja raskemuusikaklubi mis pakub iganädalast kvaliteetset meelelahutust!
                     See ei ole Barbari ametlik veebileht, vaid veebiarenduse harjutamise eesmärgil loodud leht. See ei ole Barbari ametlik veebileht, vaid veebiarenduse harjutamise eesmärgil loodud leht. See ei ole Barbari ametlik veebileht, vaid veebiarenduse harjutamise eesmärgil loodud leht. See ei ole Barbari ametlik veebileht, vaid veebiarenduse harjutamise eesmärgil loodud leht.
-                    <br><br> <strong>PS! See on lehe väga algne versioon, vajab palju täiendamist ja mobiilisõbralikuks muutmist!</strong> - 12. juuni 2020
+                    <br><br> <strong>PS! Vajab palju täiendamist ja mobiilisõbralikuks muutmist (hetkel käsil)!</strong> - 17. juuni 2020
                 </p>
             </div>
         </div>
@@ -44,7 +44,9 @@
             </p>
             </p>
         </div>
-    <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fbarbarestonia&tabs=events&width=500&height=500&small_header=true&adapt_container_width=true&hide_cover=false&show_facepile=false&appId" width="500" height="500" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
+        <div id="iframe">
+            <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fbarbarestonia&tabs=events&width=500&height=500&small_header=true&adapt_container_width=true&hide_cover=true&show_facepile=false&appId" width="500" height="500" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
+        </div>
     </section>
 
     <section id="menuu">
