Events section - responsive
Using Media Queries and 3 different width iframes.

--- a/index.html
+++ b/index.html
@@ -45,16 +45,23 @@
             </p>
         </div>
         <div id="iframe">
+            <!-- Facebook events: Large (width: 500px) -->
             <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fbarbarestonia&tabs=events&width=500&height=500&small_header=true&adapt_container_width=true&hide_cover=true&show_facepile=false&appId" width="500" height="500" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
+            <!-- Facebook events: Medium (width: 425px) -->
+            <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fbarbarestonia&tabs=events&width=425&height=500&small_header=true&adapt_container_width=true&hide_cover=true&show_facepile=false&appId" width="425" height="500" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
+            <!-- Facebook events: Small (width: 350px) -->
+            <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fbarbarestonia&tabs=events&width=350&height=500&small_header=true&adapt_container_width=true&hide_cover=true&show_facepile=false&appId" width="350" height="500" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
         </div>
     </section>
 
+    <!-- Menüü tuleb tõenäoliselt ümber teha, suurte piltide asemel luua mingi .js lahendus -->
     <section id="menuu">
         <img src="https://scontent.fhen1-1.fna.fbcdn.net/v/t1.0-9/s960x960/71085961_1277966119033861_5167954995600949248_o.jpg?_nc_cat=111&_nc_sid=316dd1&_nc_ohc=_kdyvDF00nEAX8WNDa2&_nc_ht=scontent.fhen1-1.fna&_nc_tp=7&oh=f64b9a677565a7522f61cecc0a45898f&oe=5F0AFD07" alt="">
         <img src="https://scontent.fhen1-1.fna.fbcdn.net/v/t1.0-9/s960x960/70538338_1277966129033860_3387966277208244224_o.jpg?_nc_cat=102&_nc_sid=316dd1&_nc_ohc=HmEd5T_gOQIAX-cXwwI&_nc_ht=scontent.fhen1-1.fna&_nc_tp=7&oh=b5b7dc0ed82407db7bd0a2a5d6d55619&oe=5F08618A" alt="">
         <img src="https://scontent.fhen1-1.fna.fbcdn.net/v/t1.0-9/s960x960/70401532_1277966132367193_8438684140395560960_o.jpg?_nc_cat=110&_nc_sid=316dd1&_nc_ohc=QlawpSuObecAX8wqDiX&_nc_ht=scontent.fhen1-1.fna&_nc_tp=7&oh=c5c0d352ac7dd100900bcd86786586b1&oe=5F09C7B5" alt="">
     </section>
 
+    <!-- Kontsept, tegelikult pole Barbari infokirja olemas. -->
     <section id="maillist">
         <h1>Liitu meie infokirjaga:</h1>
         <form action="POST">
@@ -63,8 +70,9 @@
         </form>
     </section>
 
+    <!-- Vajab responsiveks tegemist.-->
     <section id="contact">
-        <div class="flex">
+        <div class="cflex">
         <div id="cinfo">
             <img src="barbar.png" alt="BarBar logo" width="200px" height="200px">
             <div id="openTimes">
@@ -93,5 +101,6 @@
     <footer>
         Sadiowitch (C) 2020. || NOT BARBAR'S OFFICIAL WEBSITE, JUST WEB DEV PRACTICE!
     </footer>
+    <script src="script.js"></script>
 </body>
 </html>
