--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     <section id="contact">
         <div class="cflex">
         <div id="cinfo">
-            <img src="barbar.png" alt="BarBar logo" width="200px" height="200px">
+            <img src="https://scontent.fhen1-1.fna.fbcdn.net/v/t1.0-9/p960x960/37025631_983681288462347_6243640507050754048_o.png?_nc_cat=102&_nc_sid=85a577&_nc_ohc=l4LUOmBIBzAAX-xBWjP&_nc_ht=scontent.fhen1-1.fna&oh=82d9ca14d7ec7a5c5ef8c1886ca0c2ac&oe=5F11F921" alt="BarBar logo" width="200px" height="200px">
             <div id="openTimes">
                 <h3>Oleme avatud:</h3>
                 <p>
@@ -89,9 +89,9 @@
                 </p>
             </div>
             <div id="socials">
-                <a href="https://www.facebook.com/barbarestonia/" target="_blank"><i class="fab fa-facebook-square"></i> <span>@barbarestonia</span></a> <br>
-                <a href="https://www.instagram.com/barbarestonia/" target="_blank"><i class="fab fa-instagram"></i> <span>@barbarestonia</span></a> <br>
-                <a href="https://www.instagram.com/barbarfeast/" target="_blank"><i class="fab fa-instagram"></i> <span>@barbarfeast</span></a>
+                <a href="https://www.facebook.com/barbarestonia/" target="_blank"><span class="socsp"><i class="fab fa-facebook-square"></i> @barbarestonia</span></a> <br>
+                <a href="https://www.instagram.com/barbarestonia/" target="_blank"><span class="socsp"><i class="fab fa-instagram"></i> @barbarestonia</span></a> <br>
+                <a href="https://www.instagram.com/barbarfeast/" target="_blank"><span class="socsp"><i class="fab fa-instagram"></i> @barbarfeast</span></a>
             </div>
         </div>
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2028.9425274882697!2d24.753098615984257!3d59.43403308169559!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46929301804bef0d%3A0x1b89f8b5e04afc26!2sBarbar!5e0!3m2!1sen!2see!4v1591952758513!5m2!1sen!2see" width="500" height="350" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
