--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>NOT BarBar's Website</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="structure.css">
+    <link rel="stylesheet" href="hamburger.css">
     <link href="https://fonts.googleapis.com/css2?family=Metal+Mania&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/bd4203382c.js" crossorigin="anonymous"></script>
 </head>
@@ -19,6 +20,7 @@
         <a href="#events" class="nav-link">Üritused</a>
         <a href="#menuu" class="nav-link">Menüü</a>
         <a href="#contact" class="nav-link">Asukoht</a>
+        <a href="javascript:void(0);" class="icon" onclick="openMenu()"><i class="fa fa-bars"></i></a>
     </nav>
 
     <section id="welcome">
