--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
                 <h1>Tere tulemast!</h1>
                 <p>
                     Barbar on alternatiiv- ja raskemuusikaklubi mis pakub iganädalast kvaliteetset meelelahutust!
-                    See ei ole Barbari ametlik veebileht, vaid veebiarenduse harjutamise eesmärgil loodud leht. See ei ole Barbari ametlik veebileht, vaid veebiarenduse harjutamise eesmärgil loodud leht. See ei ole Barbari ametlik veebileht, vaid veebiarenduse harjutamise eesmärgil loodud leht. See ei ole Barbari ametlik veebileht, vaid veebiarenduse harjutamise eesmärgil loodud leht.
-                    <br><br> <strong>PS! Vajab palju täiendamist ja mobiilisõbralikuks muutmist (hetkel käsil)!</strong> - 17. juuni 2020
+                    See ei ole Barbari ametlik veebileht, vaid veebiarenduse harjutamise eesmärgil loodud leht. See ei ole Barbari ametlik veebileht, vaid veebiarenduse harjutamise eesmärgil loodud leht. See ei ole Barbari ametlik veebileht, vaid veebiarenduse harjutamise eesmärgil loodud leht. 
+                    <br><br> <strong>Hoidke uuendustel silm peal <a href="https://github.com/Sadiowitch/barbar" target="_blank">projekti Githubi repositorys!</a></strong> - 21. juuni 2020
                 </p>
             </div>
         </div>
