Order in the folder

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NOT BarBar's Website</title>
-    <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="structure.css">
-    <link rel="stylesheet" href="hamburger.css">
+    <link rel="stylesheet" href="./assets/css/structure.css">
+    <link rel="stylesheet" href="./assets/css/styles.css">
+    <link rel="stylesheet" href="./assets/css/hamburger.css">
     <link href="https://fonts.googleapis.com/css2?family=Metal+Mania&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/bd4203382c.js" crossorigin="anonymous"></script>
 </head>
@@ -18,7 +18,7 @@
     <nav id="navbar">
         <a href="#welcome" class="nav-link">Barbar</a>
         <a href="#events" class="nav-link">Üritused</a>
-        <a href="#menuu" class="nav-link">Menüü</a>
+        <!-- <a href="#menuu" class="nav-link">Menüü</a> -->
         <a href="#contact" class="nav-link">Asukoht</a>
         <a href="javascript:void(0);" class="icon" onclick="openMenu()"><i class="fa fa-bars"></i></a>
     </nav>
@@ -56,12 +56,12 @@
         </div>
     </section>
 
-    <!-- Menüü tuleb tõenäoliselt ümber teha, suurte piltide asemel luua mingi .js lahendus -->
+    <!-- Menüü tuleb tõenäoliselt ümber teha, suurte piltide asemel luua mingi .js lahendus
     <section id="menuu">
         <img src="https://scontent.fhen1-1.fna.fbcdn.net/v/t1.0-9/s960x960/71085961_1277966119033861_5167954995600949248_o.jpg?_nc_cat=111&_nc_sid=316dd1&_nc_ohc=_kdyvDF00nEAX8WNDa2&_nc_ht=scontent.fhen1-1.fna&_nc_tp=7&oh=f64b9a677565a7522f61cecc0a45898f&oe=5F0AFD07" alt="">
         <img src="https://scontent.fhen1-1.fna.fbcdn.net/v/t1.0-9/s960x960/70538338_1277966129033860_3387966277208244224_o.jpg?_nc_cat=102&_nc_sid=316dd1&_nc_ohc=HmEd5T_gOQIAX-cXwwI&_nc_ht=scontent.fhen1-1.fna&_nc_tp=7&oh=b5b7dc0ed82407db7bd0a2a5d6d55619&oe=5F08618A" alt="">
         <img src="https://scontent.fhen1-1.fna.fbcdn.net/v/t1.0-9/s960x960/70401532_1277966132367193_8438684140395560960_o.jpg?_nc_cat=110&_nc_sid=316dd1&_nc_ohc=QlawpSuObecAX8wqDiX&_nc_ht=scontent.fhen1-1.fna&_nc_tp=7&oh=c5c0d352ac7dd100900bcd86786586b1&oe=5F09C7B5" alt="">
-    </section>
+    </section> -->
 
     <!-- Kontsept, tegelikult pole Barbari infokirja olemas. -->
     <section id="maillist">
@@ -76,7 +76,7 @@
     <section id="contact">
         <div class="cflex">
         <div id="cinfo">
-            <img src="https://scontent.fhen1-1.fna.fbcdn.net/v/t1.0-9/p960x960/37025631_983681288462347_6243640507050754048_o.png?_nc_cat=102&_nc_sid=85a577&_nc_ohc=l4LUOmBIBzAAX-xBWjP&_nc_ht=scontent.fhen1-1.fna&oh=82d9ca14d7ec7a5c5ef8c1886ca0c2ac&oe=5F11F921" alt="BarBar logo" width="200px" height="200px">
+            <img src="./assets/barbar.png" alt="BarBar logo" width="200px" height="200px">
             <div id="openTimes">
                 <h3>Oleme avatud:</h3>
                 <p>
@@ -103,6 +103,6 @@
     <footer>
         Sadiowitch (C) 2020. || NOT BARBAR'S OFFICIAL WEBSITE, JUST WEB DEV PRACTICE!
     </footer>
-    <script src="script.js"></script>
+    <script src="./assets/js/script.js"></script>
 </body>
 </html>
